--- a/src/app/todo-item-component/todo-item-component.component.html
+++ b/src/app/todo-item-component/todo-item-component.component.html
@@ -7,5 +7,5 @@
     id="i"
   />
   <p>{{ item.name }}</p>
-  <button class="delete-button" (click)="removeItem()"><img src={{imageBinUrl}} class="delete-button-img"></button>
+  <button class="delete-button" (click)="removeItem()">remove</button>
 </div>
