Only tooltip needs to be added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
+.todo-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .list-wrapper {
   display: flex;
+  justify-content: space-between;
 }
