--- a/src/app/todo-item-component/todo-item-component.component.html
+++ b/src/app/todo-item-component/todo-item-component.component.html
@@ -1,4 +1,4 @@
-<div class="task">
+<div class="task" [tooltip]="this.item.doneCreated || 'not finished yet'">
   <input
     type="checkbox"
     class="check"
