--- a/src/app/todo-item-component/todo-item-component.component.html
+++ b/src/app/todo-item-component/todo-item-component.component.html
@@ -7,5 +7,7 @@
     id="i"
   />
   <p>{{ item.name }}</p>
-  <button class="delete-button" (click)="removeItem()"><mat-icon fontIcon="delete" class="white-icon"></mat-icon></button>
+  <button class="delete-button" (click)="removeItem()">
+    <mat-icon fontIcon="delete" class="white-icon"></mat-icon>
+  </button>
 </div>
