--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.top-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-wrapper {
+  width: 30vw;
+}
